feat: Labels section for profile field - EXO-61623 - Meeds-io/MIPs#38